--- a/test.html
+++ b/test.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<script>
-    window.location.href="https://blog.csdn.net/weixin_43292457";
-</script>
 
 <body>
-</body>
 
+<p>这只是一个测试</p>
+
+
+</body>
 </html>
